Bug 344812 - System settings crashing while online accounts configur
Summary: System settings crashing while online accounts configur
Status: RESOLVED FIXED
Alias: None
Product: KAccounts
Classification: Frameworks and Libraries
Component: KCM (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Telepathy Bugs
URL:
Keywords: drkonqi
: 349145 350802 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-04 04:57 UTC by Anton
Modified: 2015-07-31 14:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton 2015-03-04 04:57:00 UTC
Application: systemsettings5 (5.2.0)

Qt Version: 5.4.0
Operating System: Linux 3.18.7-200.fc21.x86_64 x86_64
Distribution: "Fedora release 21 (Twenty One)"

-- Information about the crash:
- What I was doing when the application crashed: Trying to add some online accounts, for xmpl google or facebook. After + button pressing and choosing account type it show error message "Unable to finish: There was an error while trying to process the request: Authentication method is not known."
That's all.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fda8aa0b880 (LWP 2772))]

Thread 3 (Thread 0x7fda72dc2700 (LWP 2773)):
#0  0x00007fda85c6d1fd in poll () from /lib64/libc.so.6
#1  0x00007fda84fa3182 in _xcb_conn_wait () from /lib64/libxcb.so.1
#2  0x00007fda84fa4cff in xcb_wait_for_event () from /lib64/libxcb.so.1
#3  0x00007fda755b3959 in QXcbEventReader::run() () from /usr/lib64/qt5/plugins/platforms/libqxcb.so
#4  0x00007fda868064ce in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#5  0x00007fda83fab52a in start_thread () from /lib64/libpthread.so.0
#6  0x00007fda85c7879d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fda630bb700 (LWP 2774)):
#0  0x00007fda85c68e6d in read () from /lib64/libc.so.6
#1  0x00007fda83234d30 in g_wakeup_acknowledge () from /lib64/libglib-2.0.so.0
#2  0x00007fda831f18ec in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x00007fda831f1dc3 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#4  0x00007fda831f21b2 in g_main_loop_run () from /lib64/libglib-2.0.so.0
#5  0x00007fda639c9d96 in gdbus_shared_thread_func () from /lib64/libgio-2.0.so.0
#6  0x00007fda832187b5 in g_thread_proxy () from /lib64/libglib-2.0.so.0
#7  0x00007fda83fab52a in start_thread () from /lib64/libpthread.so.0
#8  0x00007fda85c7879d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fda8aa0b880 (LWP 2772)):
[KCrash Handler]
#5  0x00007fda86a20f11 in QMetaObject::activate(QObject*, int, int, void**) () from /lib64/libQt5Core.so.5
#6  0x00007fda86c75c02 in KJob::result(KJob*, KJob::QPrivateSignal) () from /lib64/libKF5CoreAddons.so.5
#7  0x00007fda86c768da in KJob::emitResult() () from /lib64/libKF5CoreAddons.so.5
#8  0x00007fda644fa0a3 in CreateAccount::error(SignOn::Error const&) () from /usr/lib64/qt5/plugins/kcm_kaccounts.so
#9  0x00007fda86a20ac9 in QMetaObject::activate(QObject*, int, int, void**) () from /lib64/libQt5Core.so.5
#10 0x00007fda640b74b2 in SignOn::AuthSession::error(SignOn::Error const&) () from /lib64/libsignon-qt5.so.1
#11 0x00007fda640adea5 in SignOn::AuthSessionImpl::errorSlot(QDBusError const&) () from /lib64/libsignon-qt5.so.1
#12 0x00007fda640b8e09 in SignOn::AuthSessionImpl::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib64/libsignon-qt5.so.1
#13 0x00007fda86a20ac9 in QMetaObject::activate(QObject*, int, int, void**) () from /lib64/libQt5Core.so.5
#14 0x00007fda640b84f5 in SignOn::PendingCall::error(QDBusError const&) () from /lib64/libsignon-qt5.so.1
#15 0x00007fda640a4fee in SignOn::AsyncDBusProxy::setStatus(SignOn::AsyncDBusProxy::Status) () from /lib64/libsignon-qt5.so.1
#16 0x00007fda640a536b in SignOn::AsyncDBusProxy::setError(QDBusError const&) () from /lib64/libsignon-qt5.so.1
#17 0x00007fda640ae25a in SignOn::AuthSessionImpl::errorSlot(QDBusError const&) () from /lib64/libsignon-qt5.so.1
#18 0x00007fda640b8e09 in SignOn::AuthSessionImpl::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib64/libsignon-qt5.so.1
#19 0x00007fda86a20ac9 in QMetaObject::activate(QObject*, int, int, void**) () from /lib64/libQt5Core.so.5
#20 0x00007fda640b84f5 in SignOn::PendingCall::error(QDBusError const&) () from /lib64/libsignon-qt5.so.1
#21 0x00007fda640a4747 in SignOn::PendingCall::onFinished(QDBusPendingCallWatcher*) () from /lib64/libsignon-qt5.so.1
#22 0x00007fda640b873c in SignOn::PendingCall::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib64/libsignon-qt5.so.1
#23 0x00007fda86a20ac9 in QMetaObject::activate(QObject*, int, int, void**) () from /lib64/libQt5Core.so.5
#24 0x00007fda871910ef in QDBusPendingCallWatcher::finished(QDBusPendingCallWatcher*) () from /lib64/libQt5DBus.so.5
#25 0x00007fda871927f5 in QDBusPendingCallWatcher::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /lib64/libQt5DBus.so.5
#26 0x00007fda86a21c2a in QObject::event(QEvent*) () from /lib64/libQt5Core.so.5
#27 0x00007fda87854d3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#28 0x00007fda8785a330 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#29 0x00007fda869f14ab in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#30 0x00007fda869f34eb in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQt5Core.so.5
#31 0x00007fda86a48333 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#32 0x00007fda831f1aeb in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#33 0x00007fda831f1e88 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#34 0x00007fda831f1f3c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#35 0x00007fda86a48727 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#36 0x00007fda869eed42 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#37 0x00007fda869f67ec in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#38 0x000000000040e2fc in main ()

Reported using DrKonqi
Comment 1 Christoph Feck 2015-03-04 09:48:32 UTC
Martin, please request bugzilla entries for kaccounts.
Comment 2 Martin Klapetek 2015-03-04 10:23:25 UTC
Thanks for the report.

You're missing -oauth2 plugin for accounts-sso, look for packages.

I'll have a look at the crash.
Comment 3 Martin Klapetek 2015-03-04 21:33:11 UTC
Git commit a467d9da21b6a198c4c2e9f672dc597185ff76b6 by Martin Klapetek.
Committed on 04/03/2015 at 21:32.
Pushed by mklapetek into branch 'Applications/15.04'.

Guard against SignOn sending error() signal twice

That results in double delete crash

M  +4    -0    src/jobs/createaccount.cpp

http://commits.kde.org/kaccounts-integration/a467d9da21b6a198c4c2e9f672dc597185ff76b6
Comment 4 Anton 2015-03-05 03:47:24 UTC
i've reinstalled:
kaccounts-providers-1.0-2.20150122git5f2705f.fc21.noarch.rpm
kaccounts-1.0-2.20150122git0c2e1aa.fc21.x86_64.rpm

and now getting such error:
There was an error while trying to process the request: userActionFinished error: 2

System Settings/Online Accounts is not crashing now.
Comment 5 Martin Klapetek 2015-03-05 11:40:37 UTC
Given the timestamp of those packages (20150122), they are quite old. I'd suggest to wait for updates and/or make sure you have all sso plugins installed (namely the -oauth2 one).
Comment 6 Timo Gurr 2015-04-20 11:43:34 UTC
I'm running into the same error "There was an error while trying to process the request: userActionFinished error: 2" when trying to setup a Google account in the latest release of the KDE telepathy stack.

KDE telepathy stack: 15.04.0
signon: 8.57
signon-plugin-oauth2: 0.22
signon-ui: 0.17.15.04.20150410
Comment 7 Martin Klapetek 2015-04-20 11:47:18 UTC
Do you have signed-plugin-password installed too?
Comment 8 Martin Klapetek 2015-04-20 11:48:02 UTC
*signon-plugin-password (damn autocorrect)
Comment 9 Timo Gurr 2015-04-20 11:53:17 UTC
If the library is called libpasswordplugin.so then it got installed by signon-8.57 itself.
Comment 10 Martin Klapetek 2015-04-21 12:03:27 UTC
Did you build it yourself or installed from packages (and which distro)?
Comment 11 Timo Gurr 2015-04-21 12:23:34 UTC
I'm using the "packages" of Exherbo Linux, we are however a source based distro like e.g. Gentoo. I tried to setup a Google account and spotted we're currently missing signon-plugin-oauth2 (and signon-ui if that's actually needed in the proccess of setting up a Google account) so I wrote packages/exheres for them and then ran into the error mentioned above. So I've no clue what and where things go wrong and/or how to find out wich specific part is failing or causing the error.
Comment 12 Martin Klapetek 2015-04-22 08:53:20 UTC
Can you run from konsole

SSOUI_DAEMON_TIMEOUT=100 gdb signon-ui

then in gdb type 'r' and press enter, then open up kaccounts, try adding new account and see if there's a crash in gdb and if so, type 'bt' enter and post the output please?

Thanks
Comment 13 Timo Gurr 2015-04-22 10:44:16 UTC
If the debug output isn't of any use (which I guess) then I'll have to recompile with debug symbols not stripped.

(gdb) r
Starting program: /usr/x86_64-pc-linux-gnu/bin/signon-ui 
warning: Unable to find libthread_db matching inferior's thread library, thread debugging will not be available.
QIODevice::read: device not open

[...]
In the KCM after clicking on Create -> Google
[...]

Program received signal SIGSEGV, Segmentation fault.
0x00007fff8dfbdf3e in ?? () from /usr/x86_64-pc-linux-gnu/lib/libkdecore.so.5
(gdb) bt
#0  0x00007fff8dfbdf3e in ?? () from /usr/x86_64-pc-linux-gnu/lib/libkdecore.so.5
#1  0x00007ffff7de9faa in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#2  0x00007ffff7dea0bb in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#3  0x00007ffff7dee507 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#4  0x00007ffff7de9e54 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#5  0x00007ffff7dedbc3 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#6  0x00007fffeff68fa9 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libdl.so.2
#7  0x00007ffff7de9e54 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#8  0x00007fffeff69579 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libdl.so.2
#9  0x00007fffeff69041 in dlopen () from /usr/x86_64-pc-linux-gnu/lib/libdl.so.2
#10 0x00007fffe84b2c8e in libmodman::module_manager::load_file(std::string, bool) () from /usr/x86_64-pc-linux-gnu/lib/libmodman.so.1
#11 0x00007fffe84b380a in libmodman::module_manager::load_dir(std::string, bool) () from /usr/x86_64-pc-linux-gnu/lib/libmodman.so.1
#12 0x00007ffff20f172d in ?? () from /usr/x86_64-pc-linux-gnu/lib/libproxy.so.1
#13 0x00007ffff20f22bb in px_proxy_factory_new () from /usr/x86_64-pc-linux-gnu/lib/libproxy.so.1
#14 0x0000000000422763 in ?? ()
#15 0x00007ffff36c3072 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#16 0x00007ffff36c30dc in QNetworkProxyFactory::proxyForQuery(QNetworkProxyQuery const&) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#17 0x00007ffff3670368 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#18 0x00007ffff3694220 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#19 0x00007ffff3695c04 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#20 0x00007ffff3695e28 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#21 0x00007ffff370f0f9 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#22 0x00007ffff164a572 in QObject::event(QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#23 0x00007ffff4aa7ffc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Widgets.so.5
#24 0x00007ffff4aad0f0 in QApplication::notify(QObject*, QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Widgets.so.5
#25 0x00007ffff161b0e3 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#26 0x00007ffff161d09b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#27 0x00007ffff166fbb3 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#28 0x00007ffff235444d in g_main_context_dispatch () from /usr/x86_64-pc-linux-gnu/lib/libglib-2.0.so.0
#29 0x00007ffff23546f8 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libglib-2.0.so.0
#30 0x00007ffff235479c in g_main_context_iteration () from /usr/x86_64-pc-linux-gnu/lib/libglib-2.0.so.0
#31 0x00007ffff166ffa7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#32 0x00007ffff1618cb2 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#33 0x00007ffff16203fd in QCoreApplication::exec() () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#34 0x000000000040efe6 in ?? ()
#35 0x00007ffff07ed7e0 in __libc_start_main () from /usr/x86_64-pc-linux-gnu/lib/libc.so.6
#36 0x000000000040f2a9 in ?? ()
(gdb) 

(gdb) q                                                                                                                                                                                                                                                                        
A debugging session is active.                                                                                                                                                                                                                                                 
                                                                                                                                                                                                                                                                               
        Inferior 1 [process 7768] will be killed.                                                                                                                                                                                                                              
                                                                                                                                                                                                                                                                               
Quit anyway? (y or n) y

And right after quiting the debug session the userActionFinished error: 2 pops up.
Comment 14 Martin Klapetek 2015-04-22 11:02:28 UTC
This is good. It's crashing because it's trying to load kdelibs4 for some reason. Can you install kdelibs4 debug symbols and/or libkdecore debug package and try again please?

That would be helpful as I'd hope it would show why is it trying to open kdelibs4.
Comment 15 Timo Gurr 2015-04-22 12:10:55 UTC
Thank you very much! Here's the output:

[...]
(gdb) r
Starting program: /usr/x86_64-pc-linux-gnu/bin/signon-ui 
warning: Unable to find libthread_db matching inferior's thread library, thread debugging will not be available.
QIODevice::read: device not open

Program received signal SIGSEGV, Segmentation fault.
0x00007fff8df9b14e in _GLOBAL__sub_I_kauthactionwatcher.cpp () from /usr/x86_64-pc-linux-gnu/lib/libkdecore.so.5
(gdb) bt
#0  0x00007fff8df9b14e in _GLOBAL__sub_I_kauthactionwatcher.cpp () from /usr/x86_64-pc-linux-gnu/lib/libkdecore.so.5
#1  0x00007ffff7de9faa in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#2  0x00007ffff7dea0bb in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#3  0x00007ffff7dee507 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#4  0x00007ffff7de9e54 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#5  0x00007ffff7dedbc3 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#6  0x00007fffeff68fa9 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libdl.so.2
#7  0x00007ffff7de9e54 in ?? () from /usr/x86_64-pc-linux-gnu/lib/ld-linux-x86-64.so.2
#8  0x00007fffeff69579 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libdl.so.2
#9  0x00007fffeff69041 in dlopen () from /usr/x86_64-pc-linux-gnu/lib/libdl.so.2
#10 0x00007fffe84b2c8e in libmodman::module_manager::load_file(std::string, bool) () from /usr/x86_64-pc-linux-gnu/lib/libmodman.so.1
#11 0x00007fffe84b380a in libmodman::module_manager::load_dir(std::string, bool) () from /usr/x86_64-pc-linux-gnu/lib/libmodman.so.1
#12 0x00007ffff20f172d in ?? () from /usr/x86_64-pc-linux-gnu/lib/libproxy.so.1
#13 0x00007ffff20f22bb in px_proxy_factory_new () from /usr/x86_64-pc-linux-gnu/lib/libproxy.so.1
#14 0x0000000000422763 in MyNetworkProxyFactory::queryProxy(QNetworkProxyQuery const&) ()
#15 0x00007ffff36c3072 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#16 0x00007ffff36c30dc in QNetworkProxyFactory::proxyForQuery(QNetworkProxyQuery const&) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#17 0x00007ffff3670368 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#18 0x00007ffff3694220 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#19 0x00007ffff3695c04 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#20 0x00007ffff3695e28 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#21 0x00007ffff370f0f9 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Network.so.5
#22 0x00007ffff164a572 in QObject::event(QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#23 0x00007ffff4aa7ffc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Widgets.so.5
#24 0x00007ffff4aad0f0 in QApplication::notify(QObject*, QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Widgets.so.5
#25 0x00007ffff161b0e3 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#26 0x00007ffff161d09b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#27 0x00007ffff166fbb3 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#28 0x00007ffff235444d in g_main_context_dispatch () from /usr/x86_64-pc-linux-gnu/lib/libglib-2.0.so.0
#29 0x00007ffff23546f8 in ?? () from /usr/x86_64-pc-linux-gnu/lib/libglib-2.0.so.0
#30 0x00007ffff235479c in g_main_context_iteration () from /usr/x86_64-pc-linux-gnu/lib/libglib-2.0.so.0
#31 0x00007ffff166ffa7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#32 0x00007ffff1618cb2 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#33 0x00007ffff16203fd in QCoreApplication::exec() () from /usr/x86_64-pc-linux-gnu/lib/libQt5Core.so.5
#34 0x000000000040efe6 in main ()
(gdb)
Comment 16 Martin Klapetek 2015-04-22 13:04:33 UTC
It was suggested that this is libproxy's issue. You should rebuild libproxy without the kdelibs4 interface, otherwise more qt5 apps will just hit the ground hard.

See https://bugs.kde.org/show_bug.cgi?id=323407 and https://bugs.archlinux.org/task/40748 for relevant links.
Comment 17 Timo Gurr 2015-04-22 13:46:25 UTC
Thanks! I rebuilt libproxy and rebooted to be sure it's picked up, the result is signon-ui is not crashing anymore (we will fix our packages to force a libproxy without kdelibs4):

Reading symbols from signon-ui...(no debugging symbols found)...done.
(gdb) r
Starting program: /usr/x86_64-pc-linux-gnu/bin/signon-ui 
warning: Unable to find libthread_db matching inferior's thread library, thread debugging will not be available.
QIODevice::read: device not open
[New LWP 771]

However I sadly still get the same error "There was an error while trying to process the request: userActionFinished error: 2"
Comment 18 Timo Gurr 2015-04-29 12:05:53 UTC
After manually setting the proxy environment variables via ~/.bash_profile it seems to work now. It would be nice and consistent if it would pick up the settings proxy which you can set via the kcm or at least give any hint about what's going wrong. Perhaps also add some kind of timeout which doesn't seem to exist at the moment and show an error message about being unable to connect to the internet.
Comment 19 Martin Klapetek 2015-05-05 08:06:47 UTC
Thanks for the update. Can you please be more specific what did you add? I'll see what's up with that.
Comment 20 Timo Gurr 2015-05-05 08:57:52 UTC
What I added to my ~/.bash_profile:

# Proxy settings
export http_proxy=http://proxy.domain.local:3128/
export https_proxy=$http_proxy
export ftp_proxy=$http_proxy
export rsync_proxy=$http_proxy
export no_proxy="localhost,127.0.0.1,.domain.local"

I guess in KDE4 programs using a libproxy built with the kdelibs4 interface picked up the proxy settings one configured via the kcm. But since libproxy misses a KF5/KDE Plasma 5.x counterpart the proxy settings via the kcm have no effect. All this might only be true/required when a manual proxy configuration is needed, perhaps it works just fine automatically in environments where libproxy is able to figure out the proxy information itself via PAC or WPAD. Still it would be nice and consistent if at least all official KDE shipped programs make use of what is configured via the proxy kcm settings (Which I understand might not be easy here since KDE Telepathy uses many underlying programs not affiliated with KDE itself and libproxy development also seems to be rather inactive).
Comment 21 Martin Klapetek 2015-07-31 13:25:24 UTC
*** Bug 349145 has been marked as a duplicate of this bug. ***
Comment 22 Martin Klapetek 2015-07-31 14:55:29 UTC
*** Bug 350802 has been marked as a duplicate of this bug. ***