Guard against SignOn sending error() signal twice

That results in double delete crash

BUG: 344812